layout index finalizado

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   </head>
   <body>
     <header>
+      <h1>Bem-vindo ao mundo de Fallout</h1>
+
       <nav class="nav-menu">
-        <ul class="nav justify-content-end">
+        <ul class="nav justify">
           <li class="nav-item">
             <a class="nav-link" href="/index.html">Home</a>
           </li>
@@ -32,7 +34,7 @@
         </ul>
       </nav>
 
-      <div class="slider-container">
+      <!-- <div class="slider-container">
         <div
           id="carouselExampleControls"
           class="carousel slide"
@@ -85,34 +87,111 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
           </a>
         </div>
-      </div>
+      </div> -->
     </header>
 
     <main>
       <article>
-        <h1>Bem-vindo ao mundo de Fallout</h1>
+        <p class="para-article">
+          Bem-vindo ao mundo pós-apocalíptico de Fallout, onde a civilização tal
+          como a conhecemos chegou ao fim, dando lugar a um deserto árido e
+          perigoso, repleto de segredos e mistérios a serem descobertos. Em um
+          universo alternativo, a guerra nuclear do século XXI deixou a Terra em
+          ruínas, mergulhando-a em um período de caos e destruição. Mas nem tudo
+          está perdido. Das cinzas da antiga sociedade emergem novas facções,
+          cidades improvisadas e sobreviventes determinados a forjar um futuro
+          neste mundo desolado.
+        </p>
 
-        <p>
-          Bem-vindo ao mundo pós-apocalíptico de Fallout, onde a civilização tal como a conhecemos chegou ao fim, dando lugar a um deserto árido e perigoso, repleto de segredos e mistérios a serem descobertos.
+        <img src="/images/fallout-4.jpg" class="img-index" alt="" />
 
-          Em um universo alternativo, a guerra nuclear do século XXI deixou a Terra em ruínas, mergulhando-a em um período de caos e destruição. Mas nem tudo está perdido. Das cinzas da antiga sociedade emergem novas facções, cidades improvisadas e sobreviventes determinados a forjar um futuro neste mundo desolado.
-
-          Embarque em uma jornada épica através de terras devastadas, repletas de perigos e oportunidades. Enfrente criaturas mutantes, gangues raivosas e os efeitos mortais da radiação enquanto busca por recursos escassos e respostas há muito perdidas.
-
-          Com uma narrativa rica e ramificada, cada decisão que você tomar moldará o destino não apenas do seu personagem, mas também do mundo ao seu redor. Será você um herói benevolente, um vilão implacável ou um sobrevivente pragmático, disposto a fazer o que for preciso para sobreviver?
-
-          Prepare-se para explorar vastas paisagens desoladas, conhecer personagens memoráveis e desvendar os segredos enterrados sob as ruínas da civilização. Em Fallout, o destino da humanidade está em suas mãos. Aventure-se, e descubra o que realmente significa sobreviver no fim do mundo.
+        <p class="para-article">
+          Embarque em uma jornada épica através de terras devastadas, repletas
+          de perigos e oportunidades. Enfrente criaturas mutantes, gangues
+          raivosas e os efeitos mortais da radiação enquanto busca por recursos
+          escassos e respostas há muito perdidas. Com uma narrativa rica e
+          ramificada, cada decisão que você tomar moldará o destino não apenas
+          do seu personagem, mas também do mundo ao seu redor. Será você um
+          herói benevolente, um vilão implacável ou um sobrevivente pragmático,
+          disposto a fazer o que for preciso para sobreviver? Prepare-se para
+          explorar vastas paisagens desoladas, conhecer personagens memoráveis e
+          desvendar os segredos enterrados sob as ruínas da civilização. Em
+          Fallout, o destino da humanidade está em suas mãos. Aventure-se, e
+          descubra o que realmente significa sobreviver no fim do mundo.
         </p>
       </article>
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/iYZpR51XgW0?si=xz0LoCVzDp6zKu98"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
+
+      <h2 class="title-treiler">Treiler Fallout 3</h2>
+      <section class="treiler-sec" id="fallout-3">
+        <div class="para-fallout">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            sodales in ligula rhoncus consequat. Sed auctor ultrices imperdiet.
+            Suspendisse fringilla nibh tellus, eget finibus massa vehicula in.
+            Maecenas sed eleifend turpis. Integer pharetra porta mauris, quis
+            bibendum metus congue tincidunt. Aenean aliquam eu dolor eget
+            consectetur. Nulla varius dui urna. Integer ultricies finibus ligula
+            at dictum. Fusce ac ante odio.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/iYZpR51XgW0?si=xz0LoCVzDp6zKu98"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </section>
+
+      <h2 class="title-treiler">Treiler Fallout New Vegas</h2>
+      <section class="treiler-sec" id="fallout-nv">
+        <div class="para-fallout">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            sodales in ligula rhoncus consequat. Sed auctor ultrices imperdiet.
+            Suspendisse fringilla nibh tellus, eget finibus massa vehicula in.
+            Maecenas sed eleifend turpis. Integer pharetra porta mauris, quis
+            bibendum metus congue tincidunt. Aenean aliquam eu dolor eget
+            consectetur. Nulla varius dui urna. Integer ultricies finibus ligula
+            at dictum. Fusce ac ante odio.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/l-x-1fm2cq8?si=TsIJXC6s5GSeAvdU"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </section>
+
+      <h2 class="title-treiler">Treiler Fallout 4</h2>
+      <section class="treiler-sec" id="fallout-4">
+        <div class="para-fallout">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            sodales in ligula rhoncus consequat. Sed auctor ultrices imperdiet.
+            Suspendisse fringilla nibh tellus, eget finibus massa vehicula in.
+            Maecenas sed eleifend turpis. Integer pharetra porta mauris, quis
+            bibendum metus congue tincidunt. Aenean aliquam eu dolor eget
+            consectetur. Nulla varius dui urna. Integer ultricies finibus ligula
+            at dictum. Fusce ac ante odio.
+          </p>
+        </div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/XW7Of3g2JME?si=xsK2akORAba-xIen"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </section>
     </main>
 
     <footer>
