alterando texto index e adicionando fonte

--- a/index.html
+++ b/index.html
@@ -124,14 +124,8 @@
       <h2 class="title-treiler">Treiler Fallout 3</h2>
       <section class="treiler-sec" id="fallout-3">
         <div class="para-fallout">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            sodales in ligula rhoncus consequat. Sed auctor ultrices imperdiet.
-            Suspendisse fringilla nibh tellus, eget finibus massa vehicula in.
-            Maecenas sed eleifend turpis. Integer pharetra porta mauris, quis
-            bibendum metus congue tincidunt. Aenean aliquam eu dolor eget
-            consectetur. Nulla varius dui urna. Integer ultricies finibus ligula
-            at dictum. Fusce ac ante odio.
+          <p>       
+            Em Fallout 3, você emerge de um Vault subterrâneo 200 anos após uma guerra nuclear devastadora. Vagando por um mundo em ruínas, conhecido como Capital Wasteland, você enfrenta mutantes, raiders e outras criaturas perigosas enquanto busca respostas sobre o seu passado e o futuro da humanidade.
           </p>
         </div>
         <iframe
