--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           neste mundo desolado.
         </p>
 
-        <img src="/images/fallout-4.jpg" class="img-index" alt="" />
+        <img src="/images/fallout-index.jpg" class="img-index" alt="" />
 
         <p class="para-article">
           Embarque em uma jornada épica através de terras devastadas, repletas
