--- a/about.html
+++ b/about.html
@@ -1,52 +1,84 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset='utf-8'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Fallout</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='/style/main.css'>
-  <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/style/style-about.css">
-  <link rel="icon" href="/icons/fallout-icon.ico">
-</head>
-<body>
-  
-  <header>
-    <nav class="nav-menu">
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" href="/index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/gallery.html">Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/map.html">Map</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/shop.html">Shop</a>
-        </li>
-      </ul>
-    </nav>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Fallout</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="/style/main.css"
+    />
+    <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/style/style-about.css" />
+    <link rel="icon" href="/icons/fallout-icon.ico" />
+  </head>
+  <body>
+    <header>
+      <nav class="nav-menu">
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link" href="/index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/gallery.html">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/map.html">Map</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/shop.html">Shop</a>
+          </li>
+        </ul>
+      </nav>
 
-    <div class="slider">
+      <div class="slider"></div>
+    </header>
 
-    </div>
-  </header>
+    <main>
+      <div class="div-about">
+        <p class="para-about">
+          A franquia Fallout é uma série de jogos de RPG de mundo aberto que se
+          passa em um universo pós-apocalíptico. Desenvolvida pela empresa de
+          jogos Bethesda Game Studios, a série se tornou uma das mais icônicas e
+          influentes no mundo dos videogames, cativando milhões de jogadores ao
+          redor do globo. O mundo de Fallout é ambientado em uma realidade
+          alternativa, divergindo da nossa própria história após uma divergência
+          significativa durante os anos 1940 e 1950. Esta divergência cria uma
+          linha do tempo onde a cultura e a tecnologia dos anos 50 continuam a
+          prosperar até o início de uma guerra nuclear global que devastou o
+          mundo. Os jogos exploram as consequências dessa devastação, enquanto
+          os sobreviventes lutam para reconstruir a civilização em meio às
+          ruínas e aos perigos de um mundo pós-apocalíptico. A série é conhecida
+          por sua narrativa rica e complexa, repleta de personagens memoráveis,
+          facções diversas e escolhas morais difíceis. Cada jogo oferece aos
+          jogadores a liberdade de explorar vastos ambientes abertos, encontrar
+          missões secundárias envolventes e moldar o curso da história através
+          de suas próprias ações e decisões. O aspecto estilístico e estético de
+          Fallout é marcado por sua estética retro-futurista, misturando
+          elementos da cultura dos anos 50 com tecnologia avançada e distópica.
+          Os jogos apresentam uma mistura única de humor negro, satírica social
+          e uma atmosfera sombria e melancólica, criando um mundo imersivo e
+          envolvente para os jogadores explorarem. Desde o lançamento do
+          primeiro jogo, Fallout tem sido aclamado pela crítica e adorado pelos
+          fãs por sua jogabilidade envolvente, mundos ricos em detalhes e
+          narrativas profundas. Com vários títulos principais, spin-offs e uma
+          comunidade vibrante de modders que expandem ainda mais o universo do
+          jogo, a franquia Fallout continua a ser uma das mais importantes e
+          influentes da indústria dos videogames.
+        </p>
+      </div>
+    </main>
 
-  <main>
+    <footer>
+      <p>© Bethesda. All Rights Reserved.</p>
+    </footer>
 
-  </main>
-
-  <footer>
-    <p>© Bethesda. All Rights Reserved.</p>
-
-  </footer>
-
-  <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
