--- a/gallery.html
+++ b/gallery.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Fallout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="/style/main.css"
-    />
+    <link rel="stylesheet" href="/style/main.css" />
     <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/style/style-gallery.css" />
     <link rel="icon" href="/icons/fallout-icon.ico" />
@@ -41,27 +36,36 @@
     </header>
 
     <main>
-      <section class="gallery">
-        <div class="gallery-item">
-          <img src="" alt="">
+      <div class="gallery">
+        <div class="image">
+          <img src="/images/fallout-1.jpg" alt="Imagem 1" />
+        </div>
+        <div class="image">
+          <img src="/images/fallout-2.jpg" alt="Imagem 2" />
+        </div>
+        <div class="image">
+          <img src="/images/fallout-3.jpg" alt="Imagem 3" />
         </div>
 
-        <div class="gallery-item">
-          <img src="" alt="">
+        <div class="image">
+          <img src="/images/fallout-5.jpg" alt="Imagem 5" />
         </div>
-
-        <div class="gallery-item">
-          <img src="" alt="">
+        <div class="image">
+          <img src="/images/fallout-6.jpg" alt="Imagem 6" />
         </div>
-
-        <div class="gallery-item">
-          <img src="" alt="">
+        <div class="image">
+          <img src="/images/fallout-7.jpg" alt="Imagem 7" />
         </div>
-
-        <div class="gallery-item">
-          <img src="" alt="">
+        <div class="image">
+          <img src="/images/fallout-8.jpg" alt="Imagem 8" />
         </div>
-      </section>
+        <div class="image">
+          <img src="/images/fallout-4.jpg" alt="Imagem 4" />
+        </div>
+        <div class="image">
+          <img src="/images/fallout-9.jpg" alt="Imagem 9" />
+        </div>
+      </div>
     </main>
 
     <footer>
@@ -69,5 +73,6 @@
     </footer>
 
     <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/gallery-script.js"></script>
   </body>
 </html>
