alterações nos estilos e inicio da página shop

--- a/index.html
+++ b/index.html
@@ -124,8 +124,12 @@
       <h2 class="title-treiler">Treiler Fallout 3</h2>
       <section class="treiler-sec" id="fallout-3">
         <div class="para-fallout">
-          <p>       
-            Em Fallout 3, você emerge de um Vault subterrâneo 200 anos após uma guerra nuclear devastadora. Vagando por um mundo em ruínas, conhecido como Capital Wasteland, você enfrenta mutantes, raiders e outras criaturas perigosas enquanto busca respostas sobre o seu passado e o futuro da humanidade.
+          <p>
+            Em Fallout 3, você emerge de um Vault subterrâneo 200 anos após uma
+            guerra nuclear devastadora. Vagando por um mundo em ruínas,
+            conhecido como Capital Wasteland, você enfrenta mutantes, raiders e
+            outras criaturas perigosas enquanto busca respostas sobre o seu
+            passado e o futuro da humanidade.
           </p>
         </div>
         <iframe
@@ -143,13 +147,11 @@
       <section class="treiler-sec" id="fallout-nv">
         <div class="para-fallout">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            sodales in ligula rhoncus consequat. Sed auctor ultrices imperdiet.
-            Suspendisse fringilla nibh tellus, eget finibus massa vehicula in.
-            Maecenas sed eleifend turpis. Integer pharetra porta mauris, quis
-            bibendum metus congue tincidunt. Aenean aliquam eu dolor eget
-            consectetur. Nulla varius dui urna. Integer ultricies finibus ligula
-            at dictum. Fusce ac ante odio.
+            "Fallout: New Vegas" é um jogo de RPG de ação lançado em 2010 pela
+            Obsidian Entertainment e publicado pela Bethesda Softworks. Situado
+            em um universo pós-apocalíptico, o jogo se passa no deserto do
+            sudoeste dos Estados Unidos, principalmente em torno da cidade de
+            New Vegas (anteriormente Las Vegas), Nevada.
           </p>
         </div>
         <iframe
@@ -167,13 +169,11 @@
       <section class="treiler-sec" id="fallout-4">
         <div class="para-fallout">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            sodales in ligula rhoncus consequat. Sed auctor ultrices imperdiet.
-            Suspendisse fringilla nibh tellus, eget finibus massa vehicula in.
-            Maecenas sed eleifend turpis. Integer pharetra porta mauris, quis
-            bibendum metus congue tincidunt. Aenean aliquam eu dolor eget
-            consectetur. Nulla varius dui urna. Integer ultricies finibus ligula
-            at dictum. Fusce ac ante odio.
+            "Fallout 4" é um jogo de RPG de ação lançado em 2015 pela Bethesda
+            Game Studios, ambientado em um universo pós-apocalíptico
+            alternativo. A história se passa em uma versão distópica de Boston,
+            Massachusetts, conhecida como Commonwealth, após uma guerra nuclear
+            devastadora.
           </p>
         </div>
         <iframe
