--- a/shop.html
+++ b/shop.html
@@ -1,51 +1,94 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset='utf-8'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Fallout</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='/style/main.css'>
-  <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/style/style-shop.css">
-  <link rel="icon" href="/icons/fallout-icon.ico">
-</head>
-<body>
-  
-  <header>
-    <nav class="nav-menu">
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" href="/index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/gallery.html">Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/map.html">Map</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/shop.html">Shop</a>
-        </li>
-      </ul>
-    </nav>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Fallout</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="/style/main.css"
+    />
+    <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/style/style-shop.css" />
+    <link rel="icon" href="/icons/fallout-icon.ico" />
+  </head>
+  <body>
+    <header>
+      <nav class="nav-menu">
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link" href="/index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/gallery.html">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/map.html">Map</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/shop.html">Shop</a>
+          </li>
+        </ul>
+      </nav>
 
-    <div class="slider">
+      <div class="slider"></div>
+    </header>
 
-    </div>
-  </header>
+    <main>
+      <section class="shop-sec">
+        <div class="shop-div left">
+          <img src="/images/falloutshop-1.jpg" alt="" />
+          <a
+            href="https://store.steampowered.com/app/38400/Fallout_A_Post_Nuclear_Role_Playing_Game/" target="_blank" class="shop-link"
+            >Compre Fallout: A Post Nuclear Role Playing Game</a
+          >
+        </div>
 
-  <main>
+        <div class="shop-div right">
+          <img src="/images/falloutshop-2.jpg" alt="" />
+          <a
+            href="https://store.steampowered.com/app/38410/Fallout_2_A_Post_Nuclear_Role_Playing_Game/" target="_blank" class="shop-link"
+            >Compre Fallout 2: A Post Nuclear Role Playing Game</a
+          >
+        </div>
 
-  </main>
+        
+        <div class="shop-div left">
+          <img src="/images/falloutshop-3.jpg" alt="" />
+          <a
+            href="https://store.steampowered.com/app/22300/Fallout_3/" target="_blank" class="shop-link"
+            >Compre Fallout 3</a
+          >
+        </div>
 
-  <footer>
-    <p>© Bethesda. All Rights Reserved.</p>
-  </footer>
+        <div class="shop-div right">
+          <img src="/images/falloutshop-nv.jpg" alt="" />
+          <a
+            href="https://store.steampowered.com/app/22380/Fallout_New_Vegas/" target="_blank" class="shop-link"
+            >Compre Fallout New Vegas</a
+          >
+        </div>
 
-  <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-</body>
+        <div class="shop-div left">
+          <img src="/images/falloutshop-4.jpg" alt="" />
+          <a
+            href="https://store.steampowered.com/app/377160/Fallout_4/"  target="_blank" class="shop-link"
+            >Compre Fallout 4</a
+          >
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p>© Bethesda. All Rights Reserved.</p>
+    </footer>
+
+    <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
