concertando o index e o shop

--- a/about.html
+++ b/about.html
@@ -59,7 +59,10 @@
           facções diversas e escolhas morais difíceis. Cada jogo oferece aos
           jogadores a liberdade de explorar vastos ambientes abertos, encontrar
           missões secundárias envolventes e moldar o curso da história através
-          de suas próprias ações e decisões. O aspecto estilístico e estético de
+          de suas próprias ações e decisões.
+        </p>
+        <p class="para-about">
+          O aspecto estilístico e estético de
           Fallout é marcado por sua estética retro-futurista, misturando
           elementos da cultura dos anos 50 com tecnologia avançada e distópica.
           Os jogos apresentam uma mistura única de humor negro, satírica social
