--- a/index.html
+++ b/index.html
@@ -33,65 +33,10 @@
           </li>
         </ul>
       </nav>
-
-      <!-- <div class="slider-container">
-        <div
-          id="carouselExampleControls"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                class="d-block w-100"
-                src="/images/fallout-1.jpg"
-                alt="First slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="/images/fallout-2.jpg"
-                alt="Second slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="/images/fallout-3.jpg"
-                alt="Third slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="/images/fallout-4.jpg"
-                alt="Fourth slide"
-              />
-            </div>
-          </div>
-          <a
-            class="carousel-control-prev"
-            href="#carouselExampleControls"
-            role="button"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#carouselExampleControls"
-            role="button"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          </a>
-        </div>
-      </div> -->
     </header>
 
     <main>
-      <article>
+      <article class="index-article">
         <p class="para-article">
           Bem-vindo ao mundo pós-apocalíptico de Fallout, onde a civilização tal
           como a conhecemos chegou ao fim, dando lugar a um deserto árido e
