--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style/main.css" />
     <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/style/style-index.css" />
+    <link rel="stylesheet" href="style/style-index.css" />
     <link rel="icon" href="/icons/fallout-icon.ico" />
   </head>
   <body>
