update all paths

--- a/gallery.html
+++ b/gallery.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Fallout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/style/main.css" />
-    <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/style/style-gallery.css" />
-    <link rel="icon" href="/icons/fallout-icon.ico" />
+    <link rel="stylesheet" href="style/main.css" />
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="style/style-gallery.css" />
+    <link rel="icon" href="icons/fallout-icon.ico" />
   </head>
   <body>
     <header>
@@ -38,32 +38,32 @@
     <main>
       <div class="gallery">
         <div class="image">
-          <img src="/images/fallout-1.jpg" alt="Imagem 1" />
+          <img src="images/fallout-1.jpg" alt="Imagem 1" />
         </div>
         <div class="image">
-          <img src="/images/fallout-2.jpg" alt="Imagem 2" />
+          <img src="images/fallout-2.jpg" alt="Imagem 2" />
         </div>
         <div class="image">
-          <img src="/images/fallout-3.jpg" alt="Imagem 3" />
+          <img src="images/fallout-3.jpg" alt="Imagem 3" />
         </div>
 
         <div class="image">
-          <img src="/images/fallout-5.jpg" alt="Imagem 5" />
+          <img src="images/fallout-5.jpg" alt="Imagem 5" />
         </div>
         <div class="image">
-          <img src="/images/fallout-6.jpg" alt="Imagem 6" />
+          <img src="images/fallout-6.jpg" alt="Imagem 6" />
         </div>
         <div class="image">
-          <img src="/images/fallout-7.jpg" alt="Imagem 7" />
+          <img src="images/fallout-7.jpg" alt="Imagem 7" />
         </div>
         <div class="image">
-          <img src="/images/fallout-8.jpg" alt="Imagem 8" />
+          <img src="images/fallout-8.jpg" alt="Imagem 8" />
         </div>
         <div class="image">
-          <img src="/images/fallout-4.jpg" alt="Imagem 4" />
+          <img src="images/fallout-4.jpg" alt="Imagem 4" />
         </div>
         <div class="image">
-          <img src="/images/fallout-9.jpg" alt="Imagem 9" />
+          <img src="images/fallout-9.jpg" alt="Imagem 9" />
         </div>
       </div>
     </main>
@@ -72,7 +72,6 @@
       <p>© Bethesda. All Rights Reserved.</p>
     </footer>
 
-    <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/gallery-script.js"></script>
+    <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
