--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p class="para-article">
         </p>
 
-        <img src="/images/fallout-index.jpg" class="img-index" alt="" />
+        <img src="images/fallout-index.jpg" class="img-index" alt="" />
 
         <p class="para-article">
           Embarque em uma jornada épica através de terras devastadas, repletas
@@ -129,7 +129,7 @@
       <p>© Bethesda. All Rights Reserved.</p>
     </footer>
 
-    <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function () {
         var carouselElement = document.getElementById('carouselExampleControls')
