--- a/map.html
+++ b/map.html
@@ -9,10 +9,10 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="/style/main.css"
+      href="style/main.css"
     />
-    <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css" />
-    <link rel="icon" href="/icons/fallout-icon.ico" />
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css" />
+    <link rel="icon" href="icons/fallout-icon.ico" />
   </head>
   <body>
     <header>
@@ -51,6 +51,6 @@
       <p>© Bethesda. All Rights Reserved.</p>
     </footer>
 
-    <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
