--- a/shop.html
+++ b/shop.html
@@ -9,11 +9,11 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="/style/main.css"
+      href="style/main.css"
     />
-    <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/style/style-shop.css" />
-    <link rel="icon" href="/icons/fallout-icon.ico" />
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="style/style-shop.css" />
+    <link rel="icon" href="icons/fallout-icon.ico" />
   </head>
   <body>
     <header>
@@ -43,7 +43,7 @@
     <main>
       <section class="shop-sec">
         <div class="shop-div left">
-          <img src="/images/falloutshop-1.jpg" alt="" />
+          <img src="images/falloutshop-1.jpg" alt="" />
           <a
             href="https://store.steampowered.com/app/38400/Fallout_A_Post_Nuclear_Role_Playing_Game/" target="_blank" class="shop-link"
             >Compre Fallout: A Post Nuclear Role Playing Game</a
@@ -51,7 +51,7 @@
         </div>
 
         <div class="shop-div right">
-          <img src="/images/falloutshop-2.jpg" alt="" />
+          <img src="images/falloutshop-2.jpg" alt="" />
           <a
             href="https://store.steampowered.com/app/38410/Fallout_2_A_Post_Nuclear_Role_Playing_Game/" target="_blank" class="shop-link"
             >Compre Fallout 2: A Post Nuclear Role Playing Game</a
@@ -60,7 +60,7 @@
 
         
         <div class="shop-div left">
-          <img src="/images/falloutshop-3.jpg" alt="" />
+          <img src="images/falloutshop-3.jpg" alt="" />
           <a
             href="https://store.steampowered.com/app/22300/Fallout_3/" target="_blank" class="shop-link"
             >Compre Fallout 3</a
@@ -68,7 +68,7 @@
         </div>
 
         <div class="shop-div right">
-          <img src="/images/falloutshop-nv.jpg" alt="" />
+          <img src="images/falloutshop-nv.jpg" alt="" />
           <a
             href="https://store.steampowered.com/app/22380/Fallout_New_Vegas/" target="_blank" class="shop-link"
             >Compre Fallout New Vegas</a
@@ -76,7 +76,7 @@
         </div>
 
         <div class="shop-div left">
-          <img src="/images/falloutshop-4.jpg" alt="" />
+          <img src="images/falloutshop-4.jpg" alt="" />
           <a
             href="https://store.steampowered.com/app/377160/Fallout_4/"  target="_blank" class="shop-link"
             >Compre Fallout 4</a
@@ -89,6 +89,6 @@
       <p>© Bethesda. All Rights Reserved.</p>
     </footer>
 
-    <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
