update navbar links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/main.css" />
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style/style-index.css" />
-    <link rel="icon" href="./icons/fallout-icon.ico" />
+    <link rel="icon" href="icons/fallout-icon.ico" />
   </head>
   <body>
     <header>
@@ -17,19 +17,19 @@
       <nav class="nav-menu">
         <ul class="nav justify">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/gallery.html">Gallery</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/map.html">Map</a>
+            <a class="nav-link" href="map.html">Map</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/shop.html">Shop</a>
+            <a class="nav-link" href="shop.html">Shop</a>
           </li>
         </ul>
       </nav>
