--- a/gallery.html
+++ b/gallery.html
@@ -15,19 +15,19 @@
       <nav class="nav-menu">
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/gallery.html">Gallery</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/map.html">Map</a>
+            <a class="nav-link" href="map.html">Map</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/shop.html">Shop</a>
+            <a class="nav-link" href="shop.html">Shop</a>
           </li>
         </ul>
       </nav>
@@ -72,6 +72,6 @@
       <p>© Bethesda. All Rights Reserved.</p>
     </footer>
 
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src=bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
