--- a/map.html
+++ b/map.html
@@ -19,19 +19,19 @@
       <nav class="nav-menu">
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/gallery.html">Gallery</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/map.html">Map</a>
+            <a class="nav-link" href="map.html">Map</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/shop.html">Shop</a>
+            <a class="nav-link" href="shop.html">Shop</a>
           </li>
         </ul>
       </nav>
