update css style

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <main>
       <article class="index-article">
         <p class="para-article">
+          A série "Fallout" é uma franquia de jogos de RPG de ação ambientada em um universo pós-apocalíptico alternativo. Desenvolvida pela Interplay Entertainment (mais tarde pela Bethesda Game Studios), a série se destaca por sua narrativa envolvente, jogabilidade de mundo aberto e ambientação única.
+          A história se passa em uma Terra alternativa, divergente da nossa própria realidade após a Segunda Guerra Mundial, onde o mundo foi devastado por uma guerra nuclear em 2077. Esta catástrofe levou à ruína da civilização e transformou o mundo em um deserto radioativo cheio de criaturas mutantes, facções em guerra e tecnologia retrofuturista.
         </p>
 
         <img src="images/fallout-index.jpg" class="img-index" alt="" />
