update navbar height

--- a/map.html
+++ b/map.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="icons/fallout-icon.ico" />
   </head>
   <body>
-    <header>
+    <header style="height: 70px;">
       <nav class="nav-menu">
         <ul class="nav justify-content-end">
           <li class="nav-item">
